--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,10 +7,11 @@ bind - split-window -v -c "#{pane_current_path}"
 
 bind r source-file ~/.tmux.conf
 
-# less colourful status
-set -g status-bg colour240
-set -g status-fg white
+# # less colourful status
+# set -g status-bg colour240
+# set -g status-fg white
 # 256 colors support
+
 set -g default-terminal "screen-256color"
 
 # is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -40,3 +41,4 @@ bind -r J attach-session -t "ESSLI"		# Proyecto lógica
 bind -r L attach-session -t "logic"		# Proyecto lógica
 
 run-shell ~/.tmux/resurrect.tmux
+
