--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,11 +8,10 @@ bind - split-window -v -c "#{pane_current_path}"
 bind r source-file ~/.tmux.conf
 
 # # less colourful status
-# set -g status-bg colour240
-# set -g status-fg white
-# 256 colors support
-
-set -g default-terminal "screen-256color"
+set -g status-bg colour240
+set -g status-fg white
+set -g default-terminal 'screen-256color'
+set -ga terminal-overrides ',*256col*:Tc'
 
 # is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
 #     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
